# SponzaDemo-Android

./: .gitignore  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/gamepad/: shader.frag  shader.vert
app/src/main/assets/shaders/sceneRender/: shader.frag  shader.vert
app/src/main/cpp/: CMakeLists.txt  SystemManager.cpp  SystemManager.h  UniquePass.cpp  UniquePass.h  Vertex3D.h  main.cpp  set_wolf_engine_symlink.bat
app/src/main/java/com/android/sponzademo/: VulkanActivity.kt
app/src/main/res/values/: strings.xml
generateData/: CMakeLists.txt  generateData.lua  main.cpp  set_wolf_engine_symlink.bat
